# Embedded-Trainer

./: .gitignore  README.md  pyproject.toml
content/: topics.yaml
content/articles/: advanced_rtos.yaml  bit_manipulation.yaml  dma.yaml  embedded_rust.yaml  embedded_security.yaml  functional_safety.yaml  gpio.yaml  i2c.yaml  interrupts.yaml  low_power.yaml  memory_management.yaml  registers.yaml  riscv.yaml  rtos_basics.yaml  spi.yaml  timers.yaml  uart.yaml  wireless.yaml
content/bug_hunt/: bit_manipulation.yaml  gpio.yaml  i2c.yaml  interrupts.yaml  memory_management.yaml  registers.yaml  rtos_basics.yaml  spi.yaml  timers.yaml  uart.yaml
content/coding/advanced_rtos/: event_flags.yaml  lockfree_queue.yaml  memory_pool.yaml  priority_inherit.yaml  timer_wheel.yaml
content/coding/bit_manipulation/: bit_field_insert.yaml  bit_reverse.yaml  check_bit.yaml  clear_bit.yaml  count_set_bits.yaml  extract_field.yaml  set_bit.yaml  toggle_bit.yaml
content/coding/dma/: circular_buffer.yaml  dma_channel_config.yaml  dma_descriptor.yaml  dma_transfer_size.yaml  double_buffer.yaml  scatter_gather.yaml
content/coding/i2c/: i2c_crc.yaml  (+4 more)
content/quiz/: advanced_rtos.yaml  bit_manipulation.yaml  dma.yaml  embedded_rust.yaml  embedded_security.yaml  functional_safety.yaml  gpio.yaml  i2c.yaml  interrupts.yaml  low_power.yaml  memory_management.yaml  registers.yaml  riscv.yaml  rtos_basics.yaml  spi.yaml  timers.yaml  uart.yaml  wireless.yaml
content/register_sim/: gpio.yaml  interrupts.yaml  timers.yaml  uart.yaml
src/embedded_trainer/: __init__.py  __main__.py  app.py
(+248 files in other folders)
